# telemetry-hub

./: .env.example  .gitignore  AGENTS.md  AI_INTERACTION_LOG.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: anomalies.py  fleet.py  health.py  telemetry.py  vehicles.py  zones.py
backend/app/core/: config.py  ids.py  logging.py  pagination.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 20260607_0000_initial_schema.py
backend/app/domain/: enums.py  zones.py
backend/app/repositories/: anomaly_repository.py  maintenance_repository.py  mission_repository.py  telemetry_repository.py  vehicle_repository.py  zone_repository.py
backend/app/schemas/: anomalies.py  fleet.py  health.py  pagination.py  telemetry.py  vehicles.py  zones.py
backend/app/services/: anomaly_service.py  fleet_state_service.py  telemetry_service.py  vehicle_read_service.py  vehicle_status_service.py  zone_counter_service.py
backend/scripts/: seed.py  simulate_telemetry.py
backend/tests/: conftest.py  helpers.py  test_anomalies.py  test_fault_transition_atomicity.py  test_fleet_state.py  test_telemetry_ingestion.py  test_zone_counter_concurrency.py
docs/: ADR.md  PLAN.md
docs/diagrams/: architecture.mmd  fault-transition.mmd  (+1 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+14 files in other folders)
